--- a/Lyriser/Lyriser.csproj
+++ b/Lyriser/Lyriser.csproj
@@ -105,6 +105,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Views\D2dControl.cs" />
     <Compile Include="Models\ImeLanguage.cs" />
     <Compile Include="Models\LyricsSource.cs" />
     <Compile Include="ViewModels\HotKeyCommand.cs" />
@@ -164,9 +165,6 @@
     <PackageReference Include="AvalonEdit">
       <Version>6.0.1</Version>
     </PackageReference>
-    <PackageReference Include="D2dControl">
-      <Version>1.1.8</Version>
-    </PackageReference>
     <PackageReference Include="LivetCask.Behaviors">
       <Version>3.2.3.1</Version>
     </PackageReference>
@@ -176,21 +174,15 @@
     <PackageReference Include="LivetCask.Mvvm">
       <Version>3.2.3.1</Version>
     </PackageReference>
-    <PackageReference Include="SharpDX">
-      <Version>4.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="SharpDX.Direct2D1">
-      <Version>4.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="SharpDX.Direct3D11">
-      <Version>4.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="SharpDX.Mathematics">
-      <Version>4.2.0</Version>
-    </PackageReference>
     <PackageReference Include="System.Reactive">
       <Version>4.4.1</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lyriser.Core\Lyriser.Core.vcxproj">
+      <Project>{6f519980-d573-4d33-80e4-aeddb777d8ab}</Project>
+      <Name>Lyriser.Views.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
