--- a/Lyriser/Lyriser.csproj
+++ b/Lyriser/Lyriser.csproj
@@ -78,12 +78,6 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.WindowsAPICodePack">
-      <HintPath>.\Microsoft.WindowsAPICodePack.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.WindowsAPICodePack.Shell">
-      <HintPath>.\Microsoft.WindowsAPICodePack.Shell.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Numerics" />
@@ -163,25 +157,28 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AvalonEdit">
-      <Version>6.0.1</Version>
+      <Version>6.1.2.30</Version>
     </PackageReference>
     <PackageReference Include="LivetCask.Behaviors">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetCask.Collections">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
     </PackageReference>
     <PackageReference Include="LivetCask.Mvvm">
-      <Version>3.2.3.1</Version>
+      <Version>3.2.3.2</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft-WindowsAPICodePack-Shell">
+      <Version>1.1.4</Version>
     </PackageReference>
     <PackageReference Include="System.Reactive">
-      <Version>4.4.1</Version>
+      <Version>5.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lyriser.Core\Lyriser.Core.vcxproj">
       <Project>{6f519980-d573-4d33-80e4-aeddb777d8ab}</Project>
-      <Name>Lyriser.Views.Core</Name>
+      <Name>Lyriser.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
